--- a/src/main/resources/templates/admin/Contact/contactList.html
+++ b/src/main/resources/templates/admin/Contact/contactList.html
@@ -33,16 +33,17 @@
             <div th:replace="admin/aside :: header"></div>
         </nav>
         <!-- partial -->
-        <div class="main-panel">
-            <h1 class="text-center">Contact List</h1>
+        <div class="mt-3 main-panel">
+            <h2 class="text-center">Danh sách thông tin liện hệ</h2>
             <table class="table table-bordered">
                 <thead class="table-dark">
                 <tr>
                     <th>#</th>
-                    <th>Name</th>
+                    <th>Tên</th>
                     <th>Email</th>
-                    <th>Phone</th>
-                    <th>Message</th>
+                    <th>Số điện thoại</th>
+                    <th>Lời nhắn</th>
+                    <th></th>
                 </tr>
                 </thead>
                 <tbody id="contactTable"></tbody>
