--- a/src/main/resources/templates/views/success.html
+++ b/src/main/resources/templates/views/success.html
@@ -82,8 +82,8 @@
     <use xlink:href="#tornillo" y="60"></use>
   </g>
 </svg>
-<h1>Congratulations on your successful purchase!</h1>
-<h2>Go <a target="_blank" href="index">Home!</a> Shopping</h2>
+<h1>Thanh toán thành công!</h1>
+<h2>Tiếp tục <a target="_blank" href="index">mua hàng</a> </h2>
 
 <script>
   var root = document.documentElement;
