--- a/src/main/resources/templates/admin/Article/articleList.html
+++ b/src/main/resources/templates/admin/Article/articleList.html
@@ -44,17 +44,19 @@
       <div th:replace="admin/aside :: header"></div>
     </nav>
     <!-- partial -->
-    <div class="main-panel">
-      <h1 class="text-center">Article List</h1>
-      <button class="btn btn-primary mb-3" data-toggle="modal" data-target="#addArticleModal">Add New Article</button>
+    <div class="mt-3 main-panel">
+      <h2 class="text-center">Danh sách bài viết </h2>
+      <div class="d-flex justify-content-start mb-3">
+        <button class="btn btn-success btn-lg px-4" data-toggle="modal" data-target="#addArticleModal">Tạo mới bài viết</button>
+      </div>
       <table class="table table-bordered">
         <thead class="table-dark">
         <tr>
           <th>#</th>
-          <th>Title</th>
-          <th>Image</th>
-          <th>Description</th>
-          <th>Actions</th>
+          <th>Tiêu đề</th>
+          <th>Ảnh</th>
+          <th>Mô tả</th>
+          <th></th>
         </tr>
         </thead>
         <tbody id="article-list"></tbody>
@@ -68,7 +70,9 @@
     <div class="modal-dialog modal-xl" role="document">
     <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="addArticleModalLabel">Add New Article</h5>
+          <div class="d-flex justify-content-start mb-3">
+            <h5 class="modal-title" id="addArticleModalLabel">Tạo mới bài viết</h5>
+          </div>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
@@ -76,19 +80,19 @@
         <div class="modal-body">
           <form id="add-article-form">
             <div class="form-group">
-              <label for="title">Title</label>
+              <label for="title">Tiêu đề</label>
               <input type="text" class="form-control" id="title" required>
             </div>
             <div class="form-group">
-              <label for="description">Description</label>
+              <label for="description">Mô tả</label>
               <!-- CKEditor for description -->
               <textarea class="form-control" id="description" ></textarea>
             </div>
             <div class="form-group">
-              <label for="image">Image</label>
+              <label for="image">Ảnh</label>
               <input type="file" class="form-control" id="image" required>
             </div>
-            <button type="submit" class="btn btn-primary">Add Article</button>
+            <button type="submit" class="btn btn-primary">Tạo</button>
           </form>
         </div>
       </div>
@@ -132,17 +136,17 @@
     <div class="modal-dialog" role="document">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="deleteArticleModalLabel">Confirm Deletion</h5>
+          <h5 class="modal-title" id="deleteArticleModalLabel">Xác nhận xoá bài viết</h5>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
         </div>
         <div class="modal-body">
-          <p>Are you sure you want to delete this article?</p>
+          <p>Bạn có chắn chắn muốn xoá bài viêết ?</p>
         </div>
         <div class="modal-footer">
-          <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
-          <button type="button" class="btn btn-danger" id="confirm-delete">Delete</button>
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Huỷ bỏ</button>
+          <button type="button" class="btn btn-danger" id="confirm-delete">Xoá</button>
         </div>
       </div>
     </div>
@@ -152,7 +156,5 @@
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.5.3/dist/umd/popper.min.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 <script src="/js/article.js"></script>
-
-
 </body>
 </html>
