--- a/src/main/resources/templates/admin/CategoryMedicine/categoryMedicineAdd.html
+++ b/src/main/resources/templates/admin/CategoryMedicine/categoryMedicineAdd.html
@@ -7,14 +7,14 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
 </head>
 <body class="container mt-5">
-<h1 class="text-center">Add New Category Medicine</h1>
+<h1 class="text-center">Tạo mới loại thuốc</h1>
 <form id="categoryForm" class="w-50 mx-auto">
   <div class="mb-3">
-    <input type="text" id="categoryName" class="form-control" placeholder="Enter Category Name" required>
+    <input type="text" id="categoryName" class="form-control" placeholder="Nhập tên loại thuốc" required>
   </div>
   <div class="d-flex gap-2">
-    <button type="submit" class="btn btn-success w-100">Submit</button>
-    <a href="/list-cate-medicine" type="submit" class="btn btn-primary w-100">Back</a>
+    <button type="submit" class="btn btn-success w-100">Tạo</button>
+    <a href="/list-cate-medicine" type="submit" class="btn btn-primary w-100">Quay lại</a>
   </div>
 
 </form>
