--- a/src/main/resources/templates/admin/CategoryMedicine/categoryMedicineEdit.html
+++ b/src/main/resources/templates/admin/CategoryMedicine/categoryMedicineEdit.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -8,15 +7,15 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
 </head>
 <body class="container mt-5">
-<h1 class="text-center">Edit Category Medicine</h1>
+<h1 class="text-center">Sửa loại thuốc</h1>
 <form id="editCategoryForm" class="w-50 mx-auto">
   <input type="hidden" id="categoryId">
   <div class="mb-3">
     <input type="text" id="categoryName" class="form-control" required>
   </div>
   <div class="d-flex gap-2">
-    <button type="submit" class="btn btn-warning w-100">Update</button>
-    <a href="/list-cate-medicine" type="submit" class="btn btn-primary w-100">Back</a>
+    <button type="submit" class="btn btn-warning w-100">Lưu</button>
+    <a href="/list-cate-medicine" type="submit" class="btn btn-primary w-100">Quay lại</a>
   </div>
 </form>
 <script src="/js/categoryMedicine.js"></script>
