--- a/src/main/resources/templates/admin/Supplier/supplierAdd.html
+++ b/src/main/resources/templates/admin/Supplier/supplierAdd.html
@@ -7,22 +7,22 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
 </head>
 <body class="container mt-5">
-<h1 class="text-center">Add New Supplier</h1>
+<h1 class="text-center">Tạo mới nhà cung cấp</h1>
 <form id="supplierForm" class="w-50 mx-auto">
     <div class="mb-3">
-        <input type="text" id="supplierName" class="form-control" placeholder="Enter Supplier Name" required>
+        <input type="text" id="supplierName" class="form-control" placeholder="Nhập tên nhà cung cấp" required>
     </div>
 
     <div class="mb-3">
-        <input type="text" id="address" class="form-control" placeholder="Enter Address" required>
+        <input type="text" id="address" class="form-control" placeholder="Nhập địa chỉ" required>
     </div>
 
     <div class="mb-3">
-        <input type="text" id="phoneNumber" class="form-control" placeholder="Enter Phone Number" required>
+        <input type="text" id="phoneNumber" class="form-control" placeholder="Nhập số điện thoại" required>
     </div>
     <div class="d-flex gap-2">
-        <button type="submit" class="btn btn-success w-100">Submit</button>
-        <a href="/list-supplier" type="submit" class="btn btn-primary w-100">Back</a>
+        <button type="submit" class="btn btn-success w-100">Tạo </button>
+        <a href="/list-supplier" type="submit" class="btn btn-primary w-100">Quay lại</a>
     </div>
 
 </form>
