--- a/src/main/resources/templates/admin/Supplier/supplierEdit.html
+++ b/src/main/resources/templates/admin/Supplier/supplierEdit.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
 </head>
 <body class="container mt-5">
-<h1 class="text-center">Edit Supplier</h1>
+<h1 class="text-center">Sửa nhà cung cấp</h1>
 <form id="editSupplierForm" class="w-50 mx-auto">
     <input type="hidden" id="supplierId">
     <div class="mb-3">
