--- a/src/main/resources/templates/admin/Supplier/supplierList.html
+++ b/src/main/resources/templates/admin/Supplier/supplierList.html
@@ -35,9 +35,11 @@
             <div th:replace="admin/aside :: header"></div>
         </nav>
         <!-- partial -->
-        <div class="main-panel">
-            <h1 class="text-center">Supplier List</h1>
-            <a href="/add-supplier" class="btn btn-success mb-3">Add New Supplier</a>
+        <div class="mt-3 main-panel">
+            <h2 class="text-center">Danh sách nhà cung cấp</h2>
+            <div class="d-flex justify-content-start mb-3">
+                <a href="/add-supplier" class="btn btn-success btn-lg px-4">Tạo mới nhà cung cấp</a>
+            </div>
             <table class="table table-bordered">
                 <thead class="table-dark">
                 <tr>
@@ -45,7 +47,7 @@
                     <th>Supplier Name</th>
                     <th>Address</th>
                     <th>Phone Number</th>
-                    <th>Actions</th>
+                    <th></th>
                 </tr>
                 </thead>
                 <tbody id="supplierTable"></tbody>
