--- a/src/main/resources/templates/admin/aside.html
+++ b/src/main/resources/templates/admin/aside.html
@@ -19,11 +19,19 @@
       <span class="nav-link">Danh mục</span>
     </li>
     <li class="nav-item menu-items">
+      <a class="nav-link" href="list-role">
+              <span class="menu-icon">
+                <i class="mdi mdi-security"></i>
+              </span>
+        <span class="menu-title">Quyền</span>
+      </a>
+    </li>
+    <li class="nav-item menu-items">
       <a class="nav-link" href="list-user">
               <span class="menu-icon">
                 <i class="mdi mdi-playlist-play"></i>
               </span>
-        <span class="menu-title">User</span>
+        <span class="menu-title">Người dùng</span>
       </a>
     </li>
     <li class="nav-item menu-items">
@@ -31,7 +39,7 @@
               <span class="menu-icon">
                 <i class="mdi mdi-table-large"></i>
               </span>
-        <span class="menu-title">Medicine</span>
+        <span class="menu-title">Thuốc</span>
       </a>
     </li>
     <li class="nav-item menu-items">
@@ -39,7 +47,7 @@
               <span class="menu-icon">
                 <i class="mdi mdi-chart-bar"></i>
               </span>
-        <span class="menu-title">Category Medicine</span>
+        <span class="menu-title">Loại thuốc</span>
       </a>
     </li>
     <li class="nav-item menu-items">
@@ -47,7 +55,7 @@
               <span class="menu-icon">
                 <i class="mdi mdi-contacts"></i>
               </span>
-        <span class="menu-title">Contact</span>
+        <span class="menu-title">Liên lạc</span>
       </a>
     </li>
     <li class="nav-item menu-items">
@@ -55,7 +63,7 @@
               <span class="menu-icon">
                 <i class="mdi mdi-security"></i>
               </span>
-        <span class="menu-title">Article</span>
+        <span class="menu-title">Bài viết</span>
       </a>
     </li>
     <li class="nav-item menu-items">
@@ -63,7 +71,7 @@
               <span class="menu-icon">
                 <i class="mdi mdi-file-document-box"></i>
               </span>
-        <span class="menu-title">Order</span>
+        <span class="menu-title">Đơn hàng</span>
       </a>
     </li>
     <li class="nav-item menu-items">
@@ -71,7 +79,7 @@
               <span class="menu-icon">
                 <i class="mdi mdi-speedometer"></i>
               </span>
-        <span class="menu-title">Supplier</span>
+        <span class="menu-title">Nhà cung cấp</span>
       </a>
     </li>
     <li class="nav-item menu-items">
@@ -79,7 +87,7 @@
               <span class="menu-icon">
                 <i class="mdi mdi-security"></i>
               </span>
-        <span class="menu-title">Category</span>
+        <span class="menu-title">Danh mục</span>
       </a>
     </li>
   </ul>
@@ -100,12 +108,10 @@
         </a>
         <div class="dropdown-menu dropdown-menu-right navbar-dropdown preview-list"
              aria-labelledby="profileDropdown">
-          <h6 class="p-3 mb-0">Profile</h6>
           <div class="preview-item-content">
-            <p th:href="@{/logout}" class="preview-subject mb-1">Log out</p>
+            <a  th:href="@{/logout}" class="p-3 mb-0 preview-subject mb-1">Log out</a>
           </div>
           <div class="dropdown-divider"></div>
-          <p class="p-3 mb-0 text-center">Advanced settings</p>
         </div>
       </li>
     </ul>
