--- a/src/main/resources/templates/static/header.html
+++ b/src/main/resources/templates/static/header.html
@@ -69,7 +69,7 @@
                                     </a>
                                     <div class="dropdown-menu" aria-labelledby="userDropdown">
                                         <a class="dropdown-item" th:text="${username}"></a>
-                                        <a th:if="${isAuthenticated == true}" class="dropdown-item" href="cart">Giỏ hàng</a>
+                                        <a class="dropdown-item" href="cart">Giỏ hàng</a>
                                         <a th:if="${isAuthenticated == false}" class="dropdown-item" href="signin">Đăng nhập</a>
                                         <a th:if="${isAuthenticated == false}" class="dropdown-item" href="register">Đăng ký</a>
                                         <div class="dropdown-divider"></div>
@@ -78,8 +78,8 @@
                                 </div>
 
                             </ul>
-                            <form class="form-inline my-2 my-lg-0 ml-0 ml-lg-4 mb-3 mb-lg-0">
-                                <input type="text" id="searchInput" placeholder="Tìm kiếm" />
+                            <form id="searchForm" action="search-medicine" method="get" class="form-inline my-2 my-lg-0 ml-0 ml-lg-4 mb-3 mb-lg-0">
+                                <input type="text" id="keyword" name="keyword" placeholder="Tìm kiếm" />
                                 <button class="btn my-2 my-sm-0 nav_search-btn border" type="submit">
                                     <i class="fa fa-search" aria-hidden="true"></i>
                                 </button>
