--- a/src/main/resources/templates/views/article.html
+++ b/src/main/resources/templates/views/article.html
@@ -94,7 +94,7 @@
         console.log("fetchCategory function is called!"); // Log kiểm tra
 
         try {
-            const response = await fetch("http://localhost:8080/api/categories");
+            const response = await fetch("/api/categories");
             if (!response.ok) {
                 throw new Error(`HTTP error! Status: ${response.status}`);
             }
