--- a/src/main/resources/templates/views/cart.html
+++ b/src/main/resources/templates/views/cart.html
@@ -24,22 +24,22 @@
 <body>
 <div th:include="static/header :: header"></div>
   <div class="container mt-5 mb-5">
-    <h2>Shopping Cart</h2>
+    <h2>Giỏ hàng</h2>
     <table class="table table-bordered">
       <thead>
       <tr>
-        <th>Name</th>
-        <th>Price</th>
-        <th>Quantity</th>
-        <th>Total</th>
+        <th>Tên sản phẩm</th>
+        <th>Giá</th>
+        <th>Số lượng</th>
+        <th>Tổng </th>
         <th>Action</th>
       </tr>
       </thead>
       <tbody id="cartBody"></tbody>
     </table>
     <button class="btn btn-danger" onclick="clearCart()">Clear Cart</button>
-    <a href="index" class="btn btn-primary">Continue Shopping</a>
-    <a href="check-out" class="btn btn-success">Pay</a>
+    <a href="index" class="btn btn-primary">Tiếp tục mua hàng</a>
+    <a href="check-out" class="btn btn-success">Thanh toán</a>
   </div>
 <div th:include="static/footer :: footer"></div>
 
@@ -50,7 +50,7 @@
     console.log("fetchCategory function is called!"); // Log kiểm tra
 
     try {
-      const response = await fetch("http://localhost:8080/api/categories");
+      const response = await fetch("/api/categories");
       if (!response.ok) {
         throw new Error(`HTTP error! Status: ${response.status}`);
       }
