--- a/src/main/resources/templates/views/index.html
+++ b/src/main/resources/templates/views/index.html
@@ -127,12 +127,14 @@
 <script type="text/javascript" src="/js/bootstrap.js"></script>
 <script type="text/javascript" src="/js/custom.js"></script>
 <script src="/js/medicine.js"></script>
+<!--<script src="/js/search.js"></script>-->
+
 <script>
     async function fetchCategory() {
         console.log("fetchCategory function is called!"); // Log kiểm tra
 
         try {
-            const response = await fetch("http://localhost:8080/api/categories");
+            const response = await fetch("/api/categories");
             if (!response.ok) {
                 throw new Error(`HTTP error! Status: ${response.status}`);
             }
