--- a/src/main/resources/templates/admin/Medicine/medicineList.html
+++ b/src/main/resources/templates/admin/Medicine/medicineList.html
@@ -75,18 +75,23 @@
                         <img id="medicineImage" src="" alt="Medicine Image" class="img-fluid">
                     </div>
                     <div class="col-md-8">
-                        <p><strong>Name:</strong> <span id="medicineName"></span></p>
-                        <p><strong>Price:</strong> <span id="medicinePrice"></span></p>
-                        <p><strong>Description:</strong> <span id="medicineDescription"></span></p>
-                        <p><strong>Manufacturer:</strong> <span id="medicineManufacturer"></span></p>
-                        <p><strong>Ingredient:</strong> <span id="medicineIngredient"></span></p>
-                        <p><strong>Registration Number:</strong> <span id="medicineRegistrationNumber"></span></p>
-                        <p><strong>Quality Standards:</strong> <span id="medicineQualityStandards"></span></p>
-                        <p><strong>Shelf Life:</strong> <span id="medicineShelfLife"></span></p>
-                        <p><strong>Dosage Form:</strong> <span id="medicineDosageForm"></span></p>
-                        <p><strong>Quantity:</strong> <span id="medicineQuantity"></span></p>
-                        <p><strong>Specification:</strong> <span id="medicineSpecification"></span></p>
-                        <p><strong>Origin:</strong> <span id="medicineOrigin"></span></p>
+                        <p><strong>Tên thuốc:</strong> <span id="medicineName"></span></p>
+                        <p><strong>Giá:</strong> <span id="medicinePrice"></span></p>
+                        <p><strong>Mô tả:</strong> <span id="medicineDescription"></span></p>
+                        <p><strong>Nhà sản xuất:</strong> <span id="medicineManufacturer"></span></p>
+                        <p><strong>Thành phần:</strong> <span id="medicineIngredient"></span></p>
+                        <p><strong>Số đăng ký:</strong> <span id="medicineRegistrationNumber"></span></p>
+                        <p><strong>Hạn sử dụng:</strong> <span id="medicineShelfLife"></span></p>
+                        <p><strong>Dạng bào chế:</strong> <span id="medicineDosageForm"></span></p>
+                        <p><strong>Công dụng:</strong> <span id="medicineUseOfMedicine"></span></p>
+                        <p><strong>Cách dùng:</strong> <span id="medicineUsageOfMedicine"></span></p>
+                        <p><strong>Lưu ý:</strong> <span id="medicineNote"></span></p>
+                        <p><strong>Bảo quản:</strong> <span id="medicinePreservation"></span></p>
+                        <p><strong>Tác dụng phụ:</strong> <span id="medicineSideEffects"></span></p>
+                        <p><strong>Số lượng:</strong> <span id="medicineQuantity"></span></p>
+                        <p><strong>Quy cách:</strong> <span id="medicineSpecification"></span></p>
+                        <p><strong>Xuất xứ:</strong> <span id="medicineOrigin"></span></p>
+                        <p><strong>Đơn vị tính:</strong> <span id="medicineMeasurement"></span></p>
                     </div>
                 </div>
             </div>
