--- a/src/main/resources/templates/admin/Order/orderList.html
+++ b/src/main/resources/templates/admin/Order/orderList.html
@@ -68,11 +68,11 @@
                 </button>
             </div>
             <div class="modal-body">
-                <p><strong>Order Code:</strong> <span id="orderCode"></span></p>
+                <p><strong>Mã đơn:</strong> <span id="orderCode"></span></p>
                 <p><strong>Email:</strong> <span id="orderEmail"></span></p>
-                <p><strong>Phone:</strong> <span id="orderPhone"></span></p>
-                <p><strong>Payment:</strong> <span id="orderPayment"></span></p>
-                <p><strong>Note:</strong> <span id="orderNote"></span></p>
+                <p><strong>Số điện thoại:</strong> <span id="orderPhone"></span></p>
+                <p><strong>Phương thức thanh toán:</strong> <span id="orderPayment"></span></p>
+                <p><strong>Ghi chứ:</strong> <span id="orderNote"></span></p>
                 <p><strong>Ngày tạo</strong> <span id="orderCreateAt"></span></p>
 
                 <h5>Chi tiết đơn hàng:</h5>
