--- a/src/main/resources/templates/admin/home.html
+++ b/src/main/resources/templates/admin/home.html
@@ -132,12 +132,12 @@
 <!--                                                </div>-->
 <!--                                            </th>-->
                                             <th>#</th>
-                                            <th>Order No</th>
-                                            <th>Name</th>
-                                            <th>PayMent</th>
-                                            <th>Start Date</th>
-                                            <th>Payment Status</th>
-                                            <th>Actions</th>
+                                            <th>Mã đơn</th>
+                                            <th>Tên</th>
+                                            <th>Phương thức</th>
+                                            <th>Ngày tạo</th>
+                                            <th>Trạng thái/th>
+                                            <th></th>
                                         </tr>
                                         </thead>
                                         <tbody id="orderTableBody"></tbody>
