--- a/src/main/resources/templates/views/detailMedicine.html
+++ b/src/main/resources/templates/views/detailMedicine.html
@@ -13,6 +13,8 @@
     <link href="https://fonts.googleapis.com/css?family=Baloo+Chettan|Dosis:400,600,700|Poppins:400,600,700&display=swap" rel="stylesheet" />
     <!-- Custom styles for this template -->
     <link href="/css/style.css" rel="stylesheet" />
+    <link href="/css/detailMe.css" rel="stylesheet" />
+
     <!-- responsive style -->
     <link href="/css/responsive.css" rel="stylesheet" />
     <link
@@ -33,15 +35,15 @@
 <body>
 <div class="main_body_content">
     <div th:include="static/header :: header"></div>
-    <section class="py-5">
+    <section>
         <div class="container px-4 px-lg-5 my-5">
-            <div id="detailMedicine" class="row gx-4 gx-lg-5 align-items-center">
+            <div id="detailMedicine" class="row gx-4 gx-lg-5">
 
             </div>
         </div>
 
     </section>
-    <section class="py-5 ">
+    <section>
         <div class="container px-4 px-lg-5 my-5">
             <!-- Đánh giá trung bình -->
             <div id="averageRating" class="mb-3"></div>
