--- a/src/main/resources/templates/views/login.html
+++ b/src/main/resources/templates/views/login.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <title>Please sign in</title>
+    <title>Đăng nhập</title>
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossOrigin="anonymous">
     <link href="https://getbootstrap.com/docs/4.0/examples/signin/signin.css" rel="stylesheet"
@@ -37,8 +37,8 @@
                     Login
                 </button>
             </div>
-            <a class="small text-muted" href="#!">Forgot password?</a>
-            <p class="mb-5 pb-lg-2" style="color: #393f81;">Don't have an account? <a href="register">Đăng ký</a></p>
+<!--            <a class="small text-muted" href="#!">Forgot password?</a>-->
+            <p class="mb-5 pb-lg-2" style="color: #393f81;">Bạn chưa có tài khoản? <a href="register">Đăng ký</a></p>
         </form>
     </div>
 
