--- a/src/main/resources/templates/static/header.html
+++ b/src/main/resources/templates/static/header.html
@@ -68,7 +68,7 @@
                                         <i class="fa fa-user" aria-hidden="true"></i>
                                     </a>
                                     <div class="dropdown-menu" aria-labelledby="userDropdown">
-                                        <a class="dropdown-item" th:text="${username}"></a>
+                                        <a class="dropdown-item" th:text="${usernames}"></a>
                                         <a class="dropdown-item" href="cart">Giỏ hàng</a>
                                         <a th:if="${isAuthenticated == false}" class="dropdown-item" href="signin">Đăng nhập</a>
                                         <a th:if="${isAuthenticated == false}" class="dropdown-item" href="register">Đăng ký</a>
