--- a/src/main/resources/templates/views/register.html
+++ b/src/main/resources/templates/views/register.html
@@ -6,13 +6,17 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/styles.css">
-
+    <style>
+        .container {
+            padding: 30px;
+            margin: 50px 0 !important;
+        }
+    </style>
 </head>
 <body>
-<div class="mt-4 mb-4 container form-signin">
-
+<div class="container form-signin">
     <form onsubmit="event.preventDefault(); createUser();">
-        <div class="d-flex align-items-center mb-3 pb-1">
+        <div class="d-flex align-items-center pb-1">
             <i class="fas fa-cubes fa-2x me-3" style="color: #ff6219;"></i>
             <span class="h1 fw-bold mb-0">Đăng ký</span>
         </div>
@@ -62,7 +66,7 @@
                 ký
             </button>
         </div>
-        <p class="mb-5 pb-lg-2" style="color: #393f81;">You have an account? <a href="signin">Đăng nhập</a></p>
+        <p class="mb-5 pb-lg-2" style="color: #393f81;">Bạn đã có tài khoản? <a href="signin">Đăng nhập</a></p>
     </form>
     <div id="userDetail"></div>
 </div>
